# flamingo-cli

./: Makefile  README.md  flamingo.py  pyproject.toml
.github/workflows/: main.yaml
flamingo/: __init__.py  api.py  app.py  build_pack.py  dependency.py  env.py  info.py  main.py  tools.py
