[tool.poetry]
name = "flamingo-cli"
version = "1.0.6"
description = "Flamingo Command Line Interface"
authors = ["Joao Daher <joao@daher.dev>"]
packages = [
    { include = "flamingo.py" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
click = "*"
tabulate = "*"
requests = "*"
pylint = { version = "*", optional = true}
coverage = { version = "*", optional = true}

[tool.poetry.dev-dependencies]
pylint = "*"
coverage = "*"

[tool.poetry.scripts]
flamingo = 'flamingo:cli'

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
