[tool.poetry]
name = "flamingo-cli"
version = "1.3.2"
description = "Flamingo Command Line Interface"
authors = ["Joao Daher <joao@daher.dev>"]
packages = [
    { include = "flamingo" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
click = "*"
tabulate = "*"
requests = "*"
pylint = { version = "*", optional = true}
coverage = { version = "*", optional = true}

[tool.poetry.dev-dependencies]
pylint = "*"
coverage = "*"

[tool.poetry.scripts]
flamingo = 'flamingo.main:cli'

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
